VERSION: 0.4.0

Known issues:
- Sort links need updating to support ajax requests fully.
- Poor code coverage of the PicasaService.
- Add to provide (OAuth) ability to add comments.
- Provide RSS feed for albums, photos and maybe comments and tags?
- Optimisation excercise
- Param valiadation exercise

Release notes 0.4.0
- Update all controller index methods to point to the album controller's index.
- Introduction of new configuration property to allow control of the tag cache.
- Introduction of PicasaService unit tests.
- Pagination of the photo comments.
- Introduction of new comment pagination configuration.
- Small PicasaService bug fixes and improvements.
- README updates.
- Message property updates.

Release notes 0.3.0
- Introduction of the "showPrivateAlbums" and "showPrivatePhotos" config options.
- Update PicasaService to include the ability to configure whether to include private photos and albums.
- README updates.
- Fixed small bug in the album show view.

Release notes 0.2.0
- Small fix to remove tag list div when there are no tags to display.
- Removal of dependency on Spring Security.
- Introduction of the Comment domain class.
- Introduction of the Person domain class.
- Inserted comments into the show photo views.
- Added person to comments.
- Small comment / person bug fixes to the PicasaService.
- Grails upgrade to 1.2.2.
- Changes tags and comment properties to lists to allow predictable ordering.

Release notes 0.1.0
- README update.
- Insert next/previous ID check into the photo show views.
- Introduction of tags into domain objects from photo result sets.
- Introduction of tag listing into list views.
- PicasaService updates to support tag queries and searches.
- Initial support for the tag controller.
- Introduction of new configuration properties.
- Initial support for the tag listing and show views.

Release notes 0.0.3
- README update.