@@ -31,27 +31,12 @@ class UrlMappings {
             action = "show"
         }
 
-        "/photo/show/$albumId/$photoId/feed/$feed" {
-            controller = "photo"
-            action = "show"
-        }
-
         "/photo/ajaxShow/$albumId/$photoId" {
             controller = "photo"
             action = "ajaxShow"
         }
 
-        "/photo/ajaxShow/$albumId/$photoId/feed/$feed" {
-            controller = "photo"
-            action = "ajaxShow"
-        }
-
         "/photo/comments/$albumId/$photoId" {
-            controller = "photo"
-            action = "comments"
-        }
-
-        "/photo/comments/$albumId/$photoId/feed/$feed" {
             controller = "photo"
             action = "comments"
         }
